Refactor RegisterとSignUpをSignUpに統一
